--- a/pages/main/index.css
+++ b/pages/main/index.css
@@ -2,11 +2,36 @@
 {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
 
 .side-bar
 {
+    width: 300px;
+    height: 100vh;
     background-color: aqua;
+}
+
+.main-view
+{
+    width: 100%;
+    height: 100vh;
+    background-color: red;
+}
+
+#side-bar-buttons
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#side-bar-icon
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
