--- a/pages/main/index.css
+++ b/pages/main/index.css
@@ -10,7 +10,6 @@
 {
     width: 300px;
     height: 100vh;
-    background-color: aqua;
 }
 
 .main-view
@@ -34,4 +33,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 200px;
+}
+
+#side-bar-icon img
+{
+    width: 150px;
+    height: 150px;
 }
