--- a/pages/main/index.css
+++ b/pages/main/index.css
@@ -17,6 +17,10 @@
     width: 100%;
     height: 100vh;
     background-color: red;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #side-bar-buttons
