--- a/pages/default.css
+++ b/pages/default.css
@@ -1,16 +1,24 @@
 :root {
     --app_background_color : #282828;
     --border_color : #ff0000;
+    --button_bg_color : #ff0000;
+    --button_spam_color : #b10000;
+    --button_fg_color : #ffffff;
+    --side-bar-bg : #1b1b1b;
 }
 
 body{
     margin: 0px;
     padding: 0px 0px 0px 0px;
     background-color: var(--app_background_color);
+    font-family: "Poppins", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+    color: white;
 }
 
 button{
-    background: hsl(340deg 100% 32%);
+    background: var(--button_spam_color);
     border-radius: 12px;
     border: none;
     padding: 0;
@@ -18,13 +26,12 @@ button{
     outline-offset: 4px;
     margin:30px;
     width:wrap;
-    min-width: 30px;
+    min-width: 200px;
     translate: 4px;
-}
+}  
 
 button:active #general_button_span{
     transform: translateY(-2px);
-
 }
 
 button:active #network_button_span{
@@ -33,57 +40,113 @@ button:active #network_button_span{
 }
 button:active #rule_button_span{
     transform: translateY(-2px);
-
 }
+
 button:active #about_button_span{
     transform: translateY(-2px);
-
 }
+
 button:active #debug_button_span{
     transform: translateY(-2px);
 }
+
 #general_button_span{
     display: block;
     padding: 12px 42px;
     border-radius: 12px;
     font-size: 1.25rem;
-    background: hsl(345deg 100% 47%);
-    color: white;
+    background: var(--button_bg_color);
+    color: var(--button_fg_color);
     transform: translateY(-6px);
 }
+
 #network_button_span{
     display: block;
     padding: 12px 42px;
     border-radius: 12px;
     font-size: 1.25rem;
-    background: hsl(345deg 100% 47%);
-    color: white;
+    background: var(--button_bg_color);
+    color: var(--button_fg_color);
     transform: translateY(-6px);
 }
+
 #rule_button_span{
     display: block;
     padding: 12px 42px;
     border-radius: 12px;
     font-size: 1.25rem;
-    background: hsl(345deg 100% 47%);
-    color: white;
+    background: var(--button_bg_color);
+    color: var(--button_fg_color);
     transform: translateY(-6px);
 }
+
 #about_button_span{
     display: block;
     padding: 12px 42px;
     border-radius: 12px;
     font-size: 1.25rem;
-    background: hsl(345deg 100% 47%);
-    color: white;
+    background: var(--button_bg_color);
+    color: var(--button_fg_color);
     transform: translateY(-6px);
 }
+
 #debug_button_span{
     display: block;
     padding: 12px 42px;
     border-radius: 12px;
     font-size: 1.25rem;
-    background: hsl(345deg 100% 47%);
-    color: white;
+    background: var(--button_bg_color);
+    color: var(--button_fg_color);
     transform: translateY(-6px);
+}
+
+.root-div
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.side-bar
+{
+    background-color: var(--side-bar-bg);
+    width: 300px;
+    height: 100vh;
+    box-shadow: 5px 0px 10px 0px rgba(0, 0, 0, 0.50);
+}
+
+.main-view
+{
+    width: 100%;
+    height: 100vh;
+    /* background-color: red; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#side-bar-buttons
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#side-bar-icon
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 200px;
+}
+
+#side-bar-icon img
+{
+    width: 150px;
+    height: 150px;
 }
