--- a/pages/debug/debug.css
+++ b/pages/debug/debug.css
@@ -1,10 +1,10 @@
-#about-view-info-icon
+#debug-view-info-icon
 {
     width: 100px;
     height: 100px;
 }
 
-.about-view-info
+.debug-view-heading
 {
     width: 100%;
     display: flex;
