--- a/pages/default.css
+++ b/pages/default.css
@@ -118,12 +118,12 @@ button:active #debug_button_span{
 
 .main-view
 {
-    width: 100px;
+    width: 100%;
     height: 100vh;
     /* background-color: red; */
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
 
