--- a/pages/rules/rule.css
+++ b/pages/rules/rule.css
@@ -1,10 +1,10 @@
-#about-view-info-icon
+#rules-view-info-icon
 {
     width: 100px;
     height: 100px;
 }
 
-.about-view-info
+.rules-view-heading
 {
     width: 100%;
     display: flex;
