--- a/pages/default.css
+++ b/pages/default.css
@@ -60,6 +60,16 @@ button:active #debug_button_span{
     transform: translateY(-6px);
 }
 
+#rule-add-button{
+    display: block;
+    padding: 12px 42px;
+    border-radius: 12px;
+    font-size: 1.25rem;
+    background: var(--button_bg_color);
+    color: var(--button_fg_color);
+    transform: translateY(-6px);
+}
+
 #network_button_span{
     display: block;
     padding: 12px 42px;
@@ -120,7 +130,6 @@ button:active #debug_button_span{
 {
     width: 100%;
     height: 100vh;
-    /* background-color: red; */
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -149,4 +158,15 @@ button:active #debug_button_span{
 {
     width: 150px;
     height: 150px;
+}
+
+select {
+    border: none;
+    background-color: var(--side-bar-bg);
+    width: wrap;
+    height: 50px;
+    border-radius: 20px;
+    color: var(--button_fg_color);
+    margin: 10px;
+    padding: 4px;
 }
