--- a/pages/general/general.css
+++ b/pages/general/general.css
@@ -14,3 +14,11 @@
     text-align: center;
 }
 
+.general-view-info
+{
+    background-color: #1f1f1f;
+    width: 500px;
+    text-align: center;
+    border-radius: 20px;
+}
+
